--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -406,4 +406,7 @@
 
     <!-- The messsage shown on progress dialog when deleting images -->
     <string name="delete_images_message">Deleting images, please wait\u2026</string>
+
+    <!-- Shown if user selects a too small crop -->
+    <string name="crop_too_small">Crop is too small.</string>
 </resources>
