--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,7 +23,7 @@
     <!-- label for the icon meaning 'show me all the videos' -->
     <string name="all_videos">All videos</string>
 
-    <!-- label for the icon meaning 'show me all the images that were taken with the camera' -->
+    <!-- label for the icon meaning 'show me all the images that were taken with the cropimage' -->
     <string name="camera_label">Camera</string>
 
     <!-- label for the 'pictures application shown in the top level 'all applications' -->
@@ -48,15 +48,15 @@
     <!-- menu pick: view the currently selected image -->
     <string name="view_label">View picture</string>
 
-    <!-- menu pick: go to the preferences screen for the camera or image gallery -->
+    <!-- menu pick: go to the preferences screen for the cropimage or image gallery -->
     <string name="preferences_label">Camera settings</string>
 
     <!-- alert to the user to wait for some operation to complete -->
     <string name="wait">Please wait\u2026</string>
 
-    <!-- alert to the user to that shared storage must be available before using the camera [CHAR LIMIT=NONE] -->
+    <!-- alert to the user to that shared storage must be available before using the cropimage [CHAR LIMIT=NONE] -->
     <string name="no_storage" product="nosdcard">Please mount the shared storage before using the camera.</string>
-    <!-- alert to the user to that an SD card must be installed before using the camera -->
+    <!-- alert to the user to that an SD card must be installed before using the cropimage -->
     <string name="no_storage" product="default">Please insert an SD card before using the camera.</string>
 
     <!-- alert to the user to that the shared storage is too full to complete the operation [CHAR LIMIT=NONE] -->
@@ -106,7 +106,7 @@
     <!-- menu pick to enter multiselect mode -->
     <string name="multiselect">Multiselect</string>
 
-    <!-- menu pick to go to camera mode to capture a picture -->
+    <!-- menu pick to go to cropimage mode to capture a picture -->
     <string name="capture_picture">Capture picture</string>
     <!-- menu pick to go to video mode to capture a video -->
     <string name="capture_video">Capture video</string>
