--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -54,18 +54,12 @@
     <!-- alert to the user to wait for some operation to complete -->
     <string name="wait">Please wait\u2026</string>
 
-    <!-- alert to the user to that shared storage must be available before using the cropimage [CHAR LIMIT=NONE] -->
-    <string name="no_storage" product="nosdcard">Please mount the shared storage before using the camera.</string>
-    <!-- alert to the user to that an SD card must be installed before using the cropimage -->
+    <!-- alert to the user to that an SD card must be installed before using the camera -->
     <string name="no_storage" product="default">Please insert an SD card before using the camera.</string>
 
-    <!-- alert to the user to that the shared storage is too full to complete the operation [CHAR LIMIT=NONE] -->
-    <string name="not_enough_space" product="nosdcard">Your shared storage is full.</string>
     <!-- alert to the user to that the SD card is too full to complete the operation -->
     <string name="not_enough_space" product="default">Your SD card is full.</string>
 
-    <!-- alert to the user to that the shared storage is being disk-checked [CHAR LIMIT=NONE] -->
-    <string name="preparing_sd" product="nosdcard">Preparing shared storage\u2026</string>
     <!-- alert to the user to that the SD card is being disk-checked -->
     <string name="preparing_sd" product="default">Preparing SD card\u2026</string>
 
